--- a/csc470/package.json
+++ b/csc470/package.json
@@ -12,6 +12,7 @@
   "main": "app.js",
   "dependencies": {
     "debug": "^2.2.0",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "pug": "^2.0.0-rc.4"
   }
